--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-    <div id="boxHead"></div>
+    <div id="boxHead">
+        <h1>Circuitos</h1>
+        <p>Datos de la materia</p>
+    </div>
     <div class="parent1">
         <div class="box">
             <p>capacitores</p>
