--- a/index.html
+++ b/index.html
@@ -8,28 +8,50 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-    <div id="boxHead">
-        <h1>Circuitos</h1>
-        <p>Datos de la materia</p>
-    </div>
-    <div class="parent1">
-        <div class="box">
-            <p>capacitores</p>
+    <div>
+        <div id="boxHead">
+            <div id="boxHeadTittle">
+                <center>
+                    <img style="height: 110px;"src="/imgs/circuito_logo.png" alt="No se encontro la imagen">
+                </center>
+                <center>
+                    <h1 style="height: 100%; width: 100%;">Circuitos</h1>
+                </center>
+            </div>
+            <div id="boxHeadSubtitle">
+                <div></div>
+                <div></div>
+                <div></div>
+                <center>
+                    <a style="text-decoration: none;color: black;;" href="#">Paginal inicial</a>
+                </center>
+                <center>
+                    <a style="text-decoration: none; color: black;" href="#">Fuentes</a>
+                </center>
+                <center>
+                    <a style="text-decoration: none;color: black;" href="#">Otra cosa</a>
+                </center>
+            </div>
         </div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <br>
+        <div class="parent1">
+            <div class="box">
+                <p class="infoBoxes">capacitores</p>
+            </div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+        <div class="parent2">
+            <div></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div></div>
+        </div>
+        <h1>hola</h1>
+        <h1>hola</h1>
     </div>
-    <div class="parent2">
-        <div></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div></div>
-    </div>
-    <h1>hola</h1>
-    <h1>hola</h1>
-    <h1>hola</h1>
-    <h1>hola</h1>
-    <h1>hola</h1>
-    <h1>hola</h1>
 </body> 
+<footer style="background-color: black;" id="footer">
+    <h1>contenido del footer</h1>
+</footer>
 </html>
