--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
         <br>
         <div class="parent1">
             <div class="box">
-                <p class="infoBoxes">capacitores</p>
+                <div>
+                    <h2 class="subtitulos">Capacitores</h2>
+                </div>
+                <div>
+                    <p>imagen circuito</p>
+                </div>
             </div>
             <div class="box"></div>
             <div class="box"></div>
