--- a/index.html
+++ b/index.html
@@ -35,28 +35,79 @@
         </div>
         <br>
         <div class="parent1">
-            <div class="box">
-                <div>
-                    <h2 class="subtitulos">Capacitores</h2>
-                </div>
-                <div>
-                    <p>imagen circuito</p>
-                </div>
+            <div>
+                <a href="https://www.youtube.com" class="linkOtraPagina">
+                    <div class="box">
+                        <div class="subtitulos">
+                            <h2>Resistores</h2>
+                        </div>
+                        <div>
+                            <p>imagen circuito</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div>
+                <a href="#" class="linkOtraPagina">
+                    <div class="box">
+                        <div class="subtitulos">
+                            <h2>Capacitores</h2>
+                        </div>
+                        <div>
+                            <p>imagen resistores</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="linkOtraPagina">
+                    <div class="box">
+                        <div class="subtitulos">
+                            <h2>Inductores</h2>
+                        </div>
+                        <div>
+                            <p>imagen inductores</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
         <div class="parent2">
             <div></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div>
+                <a href="#" class="linkOtraPagina">
+                    <div class="box">
+                        <div class="subtitulos">
+                            <h2>Diodos</h2>
+                        </div>
+                        <div>
+                            <p>imagen diodos</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#" class="linkOtraPagina">
+                    <div class="box">
+                        <div class="subtitulos">
+                            <h2>Transistores</h2>
+                        </div>
+                        <div>
+                            <p>imagen transistores</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
             <div></div>
         </div>
-        <h1>hola</h1>
-        <h1>hola</h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 </body> 
-<footer style="background-color: black;" id="footer">
+<footer style="background-color: white;" id="footer">
     <h1>contenido del footer</h1>
 </footer>
 </html>
