--- a/index.html
+++ b/index.html
@@ -9,34 +9,18 @@
 </head>
 <body>
     <div>
-        <div id="boxHead">
-            <div id="boxHeadTittle">
-                <center>
-                    <img style="height: 110px;"src="/imgs/circuito_logo.png" alt="No se encontro la imagen">
-                </center>
-                <center>
-                    <h1 style="height: 100%; width: 100%;">Circuitos</h1>
-                </center>
-            </div>
-            <div id="boxHeadSubtitle">
-                <div></div>
-                <div></div>
-                <div></div>
-                <center>
-                    <a style="text-decoration: none;color: black;;" href="#">Paginal inicial</a>
-                </center>
-                <center>
-                    <a style="text-decoration: none; color: black;" href="#">Fuentes</a>
-                </center>
-                <center>
-                    <a style="text-decoration: none;color: black;" href="#">Otra cosa</a>
-                </center>
-            </div>
-        </div>
+        <div id="headerT"></div>
+        <script>
+            fetch("paginas/header.html")
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById("headerT").innerHTML = data;
+                });
+        </script>
         <br>
         <div class="parent1">
             <div>
-                <a href="https://www.youtube.com" class="linkOtraPagina">
+                <a href="/paginas/transistores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2>Resistores</h2>
