--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js"></script>
 </head>
-<body>
+<body id="indexBody">
     <div>
         <div id="headerT"></div>
         <script>
@@ -20,7 +20,7 @@
         <br>
         <div class="parent1">
             <div>
-                <a href="/paginas/transistores.html" class="linkOtraPagina">
+                <a href="/paginas/resistores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2>Resistores</h2>
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div>
-                <a href="#" class="linkOtraPagina">
+                <a href="/paginas/capacitores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2>Capacitores</h2>
@@ -44,7 +44,7 @@
                 </a>
             </div>
             <div>
-                <a href="#" class="linkOtraPagina">
+                <a href="/paginas/inductores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2>Inductores</h2>
@@ -59,7 +59,7 @@
         <div class="parent2">
             <div></div>
             <div>
-                <a href="#" class="linkOtraPagina">
+                <a href="/paginas/diodos.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2>Diodos</h2>
@@ -71,7 +71,7 @@
                 </a>
             </div>
             <div>
-                <a href="#" class="linkOtraPagina">
+                <a href="/paginas/transistores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
                             <h2>Transistores</h2>
@@ -91,7 +91,7 @@
         <br>
     </div>
 </body> 
-<footer style="background-color: white;" id="footer">
+<footer>
     <h1>contenido del footer</h1>
 </footer>
 </html>
