--- a/paginas/header.html
+++ b/paginas/header.html
@@ -12,13 +12,13 @@
             <div></div>
             <div></div>
         <center>
-            <a style="text-decoration: none;color: black;;" href="../index.html">Paginal inicial</a>
+            <a style="text-decoration: none; color:white;" href="../index.html">Paginal inicial</a>
         </center>
         <center>
-            <a style="text-decoration: none; color: black;" href="../index.html">Fuentes</a>
+            <a style="text-decoration: none; color: white;" href="../index.html">Fuentes</a>
         </center>
         <center>
-            <a style="text-decoration: none;color: black;" href="../index.html">Otra cosa</a>
+            <a style="text-decoration: none;color: white;" href="../index.html">Otra cosa</a>
         </center>
     </div>
 </div>
