--- a/paginas/inductores.html
+++ b/paginas/inductores.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transistores</title>
+    <title>Inductores</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body class="infoPages">
-    <div id="superior"></div>
+    <div id="header"></div>
     <script>
         fetch("header.html")
             .then(response => response.text())
             .then(data => {
-                document.getElementById("superior").innerHTML = data;
+                document.getElementById("header").innerHTML = data;
             });
     </script>
 </body>
