--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
                         <div class="subtitulos">
                             <h2>Resistores</h2>
                         </div>
-                        <div>
-                            <p>imagen circuito</p>
-                        </div>
+                        <center style="align-items: center;">
+                            <div class="simbol" >
+                                <svg width="100" height="60" viewBox="0 0 100 60">
+                                    <line x1="0" y1="30" x2="20" y2="30" stroke="#000" stroke-width="2"/>
+                                    <path d="M 20 30 L 25 20 L 30 40 L 35 20 L 40 40 L 45 20 L 50 40 L 55 20 L 60 40 L 65 20 L 70 40 L 75 20 L 80 30" 
+                                        fill="none" stroke="#000" stroke-width="2"/>
+                                    <line x1="80" y1="30" x2="100" y2="30" stroke="#000" stroke-width="2"/>
+                                </svg>
+                            </div>
+                        </center>
                     </div>
                 </a>
             </div>
@@ -37,9 +44,14 @@
                         <div class="subtitulos">
                             <h2>Capacitores</h2>
                         </div>
-                        <div>
-                            <p>imagen resistores</p>
-                        </div>
+                        <div class="simbol">
+                            <svg width="100" height="60" viewBox="0 0 100 60">
+                                <line x1="0" y1="30" x2="45" y2="30" stroke="#000" stroke-width="2"/>
+                                <line x1="45" y1="10" x2="45" y2="50" stroke="#000" stroke-width="3"/>
+                                <line x1="55" y1="10" x2="55" y2="50" stroke="#000" stroke-width="3"/>
+                                <line x1="55" y1="30" x2="100" y2="30" stroke="#000" stroke-width="2"/>
+                            </svg>
+                        </div>  
                     </div>
                 </a>
             </div>
@@ -49,8 +61,17 @@
                         <div class="subtitulos">
                             <h2>Inductores</h2>
                         </div>
-                        <div>
-                            <p>imagen inductores</p>
+                        <div class="simbol">
+                            <svg width="100" height="60" viewBox="0 0 100 60">
+                                <line x1="0" y1="30" x2="15" y2="30" stroke="#000" stroke-width="2"/>
+                                <path d="M 15 30 Q 20 15 25 30" fill="none" stroke="#000" stroke-width="2"/>
+                                <path d="M 25 30 Q 30 15 35 30" fill="none" stroke="#000" stroke-width="2"/>
+                                <path d="M 35 30 Q 40 15 45 30" fill="none" stroke="#000" stroke-width="2"/>
+                                <path d="M 45 30 Q 50 15 55 30" fill="none" stroke="#000" stroke-width="2"/>
+                                <path d="M 55 30 Q 60 15 65 30" fill="none" stroke="#000" stroke-width="2"/>
+                                <path d="M 65 30 Q 70 15 75 30" fill="none" stroke="#000" stroke-width="2"/>
+                                <line x1="75" y1="30" x2="100" y2="30" stroke="#000" stroke-width="2"/>
+                            </svg>
                         </div>
                     </div>
                 </a>
@@ -64,8 +85,13 @@
                         <div class="subtitulos">
                             <h2>Diodos</h2>
                         </div>
-                        <div>
-                            <p>imagen diodos</p>
+                        <div class="simbol">
+                            <svg width="100" height="60" viewBox="0 0 100 60">
+                                <line x1="0" y1="30" x2="40" y2="30" stroke="#000" stroke-width="2"/>
+                                <polygon points="40,15 40,45 60,30" fill="#000"/>
+                                <line x1="60" y1="15" x2="60" y2="45" stroke="#000" stroke-width="3"/>
+                                <line x1="60" y1="30" x2="100" y2="30" stroke="#000" stroke-width="2"/>
+                            </svg>
                         </div>
                     </div>
                 </a>
@@ -76,8 +102,17 @@
                         <div class="subtitulos">
                             <h2>Transistores</h2>
                         </div>
-                        <div>
-                            <p>imagen transistores</p>
+                        <div class="simbol">
+                            <svg width="100" height="80" viewBox="0 0 100 80">
+                                <circle cx="50" cy="40" r="25" fill="none" stroke="#000" stroke-width="2"/>
+                                <line x1="0" y1="40" x2="35" y2="40" stroke="#000" stroke-width="2"/>
+                                <line x1="40" y1="25" x2="40" y2="55" stroke="#000" stroke-width="3"/>
+                                <line x1="40" y1="30" x2="65" y2="15" stroke="#000" stroke-width="2"/>
+                                <line x1="65" y1="15" x2="65" y2="0" stroke="#000" stroke-width="2"/>
+                                <line x1="40" y1="50" x2="65" y2="65" stroke="#000" stroke-width="2"/>
+                                <line x1="65" y1="65" x2="65" y2="80" stroke="#000" stroke-width="2"/>
+                                <polygon points="60,62 68,68 65,58" fill="#000"/>
+                            </svg>
                         </div>
                     </div>
                 </a>
