--- a/paginas/header.html
+++ b/paginas/header.html
@@ -4,7 +4,7 @@
             <img style="height: 110px;" src="/imgs/circuito_logo.png" alt="No se encontro la imagen">
         </center>
         <center>
-            <h1 style="height: 100%; width: 100%;">Circuitos</h1>
+            <h1 style="height: 100%; width: 100%; font-family:fuenteNueva" >Circuitos</h1>
         </center>
     </div>
     <div id="boxHeadSubtitle">
@@ -12,13 +12,13 @@
             <div></div>
             <div></div>
         <center>
-            <a style="text-decoration: none; color:white;" href="../index.html">Paginal inicial</a>
+            <a style="text-decoration: none; color:white; font-family:fuenteNueva" href="../index.html">Paginal inicial</a>
         </center>
         <center>
-            <a style="text-decoration: none; color: white;" href="../index.html">Fuentes</a>
+            <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">Fuentes</a>
         </center>
         <center>
-            <a style="text-decoration: none;color: white;" href="../index.html">Otra cosa</a>
+            <a style="text-decoration: none;color: white; font-family:fuenteNueva" href="../index.html">Otra cosa</a>
         </center>
     </div>
 </div>
