--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="/paginas/resistores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
-                            <h2>Resistores</h2>
+                            <h2 style="font-family:fuenteNueva">Resistores</h2>
                         </div>
                         <center style="align-items: center;">
                             <div class="simbol" >
@@ -42,7 +42,7 @@
                 <a href="/paginas/capacitores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
-                            <h2>Capacitores</h2>
+                            <h2 style="font-family:fuenteNueva">Capacitores</h2>
                         </div>
                         <div class="simbol">
                             <svg width="100" height="60" viewBox="0 0 100 60">
@@ -59,7 +59,7 @@
                 <a href="/paginas/inductores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
-                            <h2>Inductores</h2>
+                            <h2 style="font-family:fuenteNueva">Inductores</h2>
                         </div>
                         <div class="simbol">
                             <svg width="100" height="60" viewBox="0 0 100 60">
@@ -83,7 +83,7 @@
                 <a href="/paginas/diodos.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
-                            <h2>Diodos</h2>
+                            <h2 style="font-family:fuenteNueva">Diodos</h2>
                         </div>
                         <div class="simbol">
                             <svg width="100" height="60" viewBox="0 0 100 60">
@@ -100,7 +100,7 @@
                 <a href="/paginas/transistores.html" class="linkOtraPagina">
                     <div class="box">
                         <div class="subtitulos">
-                            <h2>Transistores</h2>
+                            <h2 style="font-family:fuenteNueva">Transistores</h2>
                         </div>
                         <div class="simbol">
                             <svg width="100" height="80" viewBox="0 0 100 80">
