--- a/paginas/diodos.html
+++ b/paginas/diodos.html
@@ -15,5 +15,30 @@
                 document.getElementById("header").innerHTML = data;
             });
     </script>
+    <div>
+        <div id="contenido">
+            <div id="subContenido">
+                <div style="background-color: white;">
+                    <h1 style="font-family: fuenteNueva; font-size:3rem">Diodos</h1>
+                </div>
+                <div style="background-color: green;">
+                    <p class="txtInfo">
+                        Los diodos son componentes electrónicos que permiten que la corriente eléctrica pase en un solo sentido y bloquean el paso en el sentido contrario.
+                        Son esenciales en fuentes de poder, protección de circuitos, rectificación de corriente y muchas otras aplicaciones.<br>
+                        Un diodo es un componente hecho con material semiconductor (generalmente silicio) y formado por una unión PN:<br>
+                        P → zona positiva (agujeros)<br>
+                        N → zona negativa (electrones)<br>
+                        Por cómo están unidas estas dos zonas, el diodo solo conduce corriente si se polariza correctamente.
+                    </p>    
+                </div>
+            </div>
+            <div class="grid-image">
+                <div id="subGridImage">
+                    <img src="../imgs/diodo.png" style="height: 200px;" alt="no se puede cargar la img">
+                </div>
+                <div style="background-color: blue; width: 100%;height:auto">a</div>            
+            </div>
+        </div>
+    </div>
 </body>
 </html>
