--- a/paginas/inductores.html
+++ b/paginas/inductores.html
@@ -15,5 +15,26 @@
                 document.getElementById("header").innerHTML = data;
             });
     </script>
+       <div>
+        <div id="contenido">
+            <div id="subContenido">
+                <div style="background-color: white;">
+                    <h1 style="font-family: fuenteNueva; font-size:3rem">Inductores</h1>
+                </div>
+                <div style="background-color: green;">
+                    <p class="txtInfo">
+                        Los inductores (o bobinas) son componentes electrónicos que almacenan energía en forma de campo magnético cuando circula corriente por ellos. Son muy usados en fuentes de poder, filtros, motores, antenas y circuitos de radiofrecuencia.<br>
+                        Cuando la corriente pasa por la bobina, se genera un campo magnético, y esa energía almacenada afecta cómo se comporta la corriente en el circuito.
+                    </p>    
+                </div>
+            </div>
+            <div class="grid-image">
+                <div id="subGridImage">
+                    <img src="../imgs/inductor.png" style="height: 200px;" alt="no se puede cargar la img">
+                </div>
+                <div style="background-color: blue; width: 100%;height:auto">a</div>            
+            </div>
+        </div>
+    </div>
 </body>
 </html>
