--- a/paginas/resistores.html
+++ b/paginas/resistores.html
@@ -15,5 +15,28 @@
                 document.getElementById("header").innerHTML = data;
             });
     </script>
+    <div>
+        <div id="contenido">
+            <div id="subContenido">
+                <div style="background-color: white;">
+                    <h1 style="font-family: fuenteNueva; font-size:3rem">Resistores</h1>
+                </div>
+                <div style="background-color: green;">
+                    <p class="txtInfo">
+                        Las resistencias (o resistores) son componentes electrónicos cuya función principal es oponerse al paso de la corriente eléctrica. Están presentes prácticamente en todos los circuitos eléctricos y electrónicos porque permiten controlar cuánta corriente circula por cada parte del circuito.<br>
+                        1. Limitar la corriente
+                        Evitan que componentes sensibles (como LEDs, transistores, microcontroladores) reciban más corriente de la que soportan.
+                        Ejemplo: Un LED conectado sin resistencia se quema inmediatamente.
+                    </p>
+                </div>
+            </div>
+            <div class="grid-image">
+                <div id="subGridImage">
+                    <img src="../imgs/sub_resistencia.png" alt="no se puede cargar la img">
+                </div>
+                <div style="background-color: blue; width: 100%;height:auto">a</div>            
+            </div>
+        </div>
+    </div>
 </body>
 </html>
