--- a/paginas/transistores.html
+++ b/paginas/transistores.html
@@ -15,5 +15,26 @@
                 document.getElementById("superior").innerHTML = data;
             });
     </script>
+    <div>
+        <div id="contenido">
+            <div id="subContenido">
+                <div style="background-color: white;">
+                    <h1 style="font-family: fuenteNueva; font-size:3rem">Transistores</h1>
+                </div>
+                <div style="background-color: green;">
+                    <p class="txtInfo">
+                        Los transistores son componentes electrónicos fundamentales que sirven para controlar, amplificar o conmutar señales eléctricas. Son la base de casi toda la electrónica moderna (computadoras, radios, fuentes de poder, sensores, etc.).<br>
+                        Es como un interruptor electrónico que puede encenderse o apagarse muy rápido, o trabajar de forma intermedia para amplificación.
+                    </p>    
+                </div>
+            </div>
+            <div class="grid-image">
+                <div id="subGridImage">
+                    <img src="../imgs/transistor.png" style="height: 200px;" alt="no se puede cargar la img">
+                </div>
+                <div style="background-color: blue; width: 100%;height:auto">a</div>            
+            </div>
+        </div>
+    </div>
 </body>
 </html>
