--- a/paginas/capacitores.html
+++ b/paginas/capacitores.html
@@ -15,5 +15,34 @@
                 document.getElementById("header").innerHTML = data;
             });
     </script>
+     <div>
+        <div id="contenido">
+            <div id="subContenido">
+                <div style="background-color: white;">
+                    <h1 style="font-family: fuenteNueva; font-size:3rem">Capacitores</h1>
+                </div>
+                <div style="background-color: green;">
+                    <p class="txtInfo">
+                        Los condensadores (también llamados capacitores) son componentes electrónicos que almacenan energía eléctrica en forma de carga por un tiempo.
+                        Son fundamentales en fuentes de alimentación, filtros, audio, temporizadores, motores, flashes de cámara y casi cualquier circuito electrónico.<br>
+                        Un condensador está formado por dos placas metálicas separadas por un material aislante llamado dieléctrico (aire, cerámica, plástico, electrolito, etc.).<br>
+                        Cuando se aplica voltaje entre sus terminales:<br>
+                        una placa se carga positivamente<br>
+                        la otra se carga negativamente<br>
+                        → almacena energía eléctrica<br>
+                        La cantidad que puede almacenar se llama capacitancia, medida en faradios (F).
+                    </p>    
+                </div>
+            </div>
+            <div class="grid-image">
+                <div id="subGridImage">
+                    <center>
+                        <img src="../imgs/condensador.png" style="height: 200px;" alt="no se puede cargar la img">
+                    </center>
+                </div>
+                <div style="background-color: blue; width: 100%;height:auto">a</div>            
+            </div>
+        </div>
+    </div>
 </body>
 </html>
